# quantum-compare_bin_packing

./: bestfit.py  cqm.py  demo.txt  firstfit.py  glpk.py  pyproject.toml  qubo.py  utils.py
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
1d_runner/: bestfit.py  cqm.py  firstfit.py  glpk.py  qubo.py
1d_runner/input/: instance_1.csv
3d_runner/: animationtool.py  bestfit_3d_wr.py  cqm_3d.py  dy_bf_3d.py  firstfit_3d_wr.py  glpk_3d.py  visualtool.py
3d_runner/input/: instance_3d_0.csv  instance_3d_1.csv  instance_3d_2.csv  instance_3d_3.csv  instance_3d_4.csv
data/: instance_1.csv
