[tool.poetry]
name = "1d-compare"
version = "0.1.0"
description = ""
authors = ["Joshualiu <joshua.liu@decisionlab.co.uk>"]
readme = "README.md"
packages = [{include = "1d_compare"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dwave-ocean-sdk = ">=6.3.0"
mip = "1.13.0"
plotly = "5.6.0"
streamlit = "1.22.0"
tabulate = "0.8.9"
altair = ">=3.2.0,<5"
qiskit = {extras = ["optimization"], version = "^0.43.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
